sintatico.output
Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM

    3 cabecalho: T_PROGRAMA T_IDENTIF

    4 variaveis: %empty
    5          | declaracao_variaveis

    6 $@2: %empty

    7 variavel: T_IDENTIF $@2 tamanho

    8 lista_variaveis: lista_variaveis variavel
    9                | variavel

   10 tamanho: %empty
   11        | T_ABREC T_NUMERO T_FECHAC

   12 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
   13                     | tipo lista_variaveis

   14 tipo: T_INTEIRO
   15     | T_LOGICO

   16 lista_comandos: %empty
   17               | comando lista_comandos

   18 comando: leitura
   19        | escrita
   20        | repeticao
   21        | selecao
   22        | atribuicao

   23 $@3: %empty

   24 leitura: T_LEIA T_IDENTIF $@3 colchetes

   25 colchetes: %empty
   26          | T_ABREC expr T_FECHAC

   27 escrita: T_ESCREVA expr

   28 $@4: %empty

   29 $@5: %empty

   30 repeticao: T_ENQTO $@4 expr T_FACA $@5 lista_comandos T_FIMENQTO
   31          | T_REPITA lista_comandos T_ATE expr T_FIMREPITA

   32 $@6: %empty

   33 $@7: %empty

   34 selecao: T_SE expr T_ENTAO $@6 lista_comandos T_SENAO $@7 lista_comandos T_FIMSE

   35 $@8: %empty

   36 atribuicao: T_IDENTIF $@8 T_ATRIB expr

   37 $@9: %empty

   38 $@10: %empty

   39 atribuicao: T_IDENTIF $@9 T_ABREC expr T_FECHAC $@10 T_ATRIB expr

   40 indice: %empty
   41       | T_ABREC expr T_FECHAC

   42 expr: expr T_VEZES expr
   43     | expr T_DIV expr
   44     | expr T_MAIS expr
   45     | expr T_MENOS expr
   46     | expr T_MAIOR expr
   47     | expr T_MENOR expr
   48     | expr T_IGUAL expr
   49     | expr T_E expr
   50     | expr T_OU expr
   51     | termo

   52 $@11: %empty

   53 termo: T_IDENTIF $@11 indice
   54      | T_NUMERO
   55      | T_V
   56      | T_F
   57      | T_NAO termo
   58      | T_ABRE expr T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 3
    T_INICIO (259) 2
    T_FIM (260) 2
    T_IDENTIF (261) 3 7 24 36 39 53
    T_LEIA (262) 24
    T_ESCREVA (263) 27
    T_ENQTO (264) 30
    T_FACA (265) 30
    T_FIMENQTO (266) 30
    T_SE (267) 34
    T_ENTAO (268) 34
    T_SENAO (269) 34
    T_FIMSE (270) 34
    T_ATRIB (271) 36 39
    T_VEZES (272) 42
    T_DIV (273) 43
    T_MAIS (274) 44
    T_MENOS (275) 45
    T_IGUAL (276) 48
    T_MAIOR (277) 46
    T_MENOR (278) 47
    T_E (279) 49
    T_OU (280) 50
    T_V (281) 55
    T_F (282) 56
    T_NUMERO (283) 11 54
    T_NAO (284) 57
    T_ABRE (285) 58
    T_FECHA (286) 58
    T_INTEIRO (287) 14
    T_LOGICO (288) 15
    T_ABREC (289) 11 26 39 41
    T_FECHAC (290) 11 26 39 41
    T_REPITA (291) 31
    T_ATE (292) 31
    T_FIMREPITA (293) 31


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    programa (40)
        on left: 2
        on right: 0
    $@1 (41)
        on left: 1
        on right: 2
    cabecalho (42)
        on left: 3
        on right: 2
    variaveis (43)
        on left: 4 5
        on right: 2
    variavel (44)
        on left: 7
        on right: 8 9
    $@2 (45)
        on left: 6
        on right: 7
    lista_variaveis (46)
        on left: 8 9
        on right: 8 12 13
    tamanho (47)
        on left: 10 11
        on right: 7
    declaracao_variaveis (48)
        on left: 12 13
        on right: 5 12
    tipo (49)
        on left: 14 15
        on right: 12 13
    lista_comandos (50)
        on left: 16 17
        on right: 2 17 30 31 34
    comando (51)
        on left: 18 19 20 21 22
        on right: 17
    leitura (52)
        on left: 24
        on right: 18
    $@3 (53)
        on left: 23
        on right: 24
    colchetes (54)
        on left: 25 26
        on right: 24
    escrita (55)
        on left: 27
        on right: 19
    repeticao (56)
        on left: 30 31
        on right: 20
    $@4 (57)
        on left: 28
        on right: 30
    $@5 (58)
        on left: 29
        on right: 30
    selecao (59)
        on left: 34
        on right: 21
    $@6 (60)
        on left: 32
        on right: 34
    $@7 (61)
        on left: 33
        on right: 34
    atribuicao (62)
        on left: 36 39
        on right: 22
    $@8 (63)
        on left: 35
        on right: 36
    $@9 (64)
        on left: 37
        on right: 39
    $@10 (65)
        on left: 38
        on right: 39
    indice (66)
        on left: 40 41
        on right: 53
    expr (67)
        on left: 42 43 44 45 46 47 48 49 50 51
        on right: 26 27 30 31 34 36 39 41 42 43 44 45 46 47 48 49 50 58
    termo (68)
        on left: 53 54 55 56 57 58
        on right: 51 57
    $@11 (69)
        on left: 52
        on right: 53


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    3 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    2 programa: cabecalho . variaveis $@1 T_INICIO lista_comandos T_FIM

    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 4 (variaveis)

    variaveis             go to state 8
    declaracao_variaveis  go to state 9
    tipo                  go to state 10


State 4

    3 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 3 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

   14 tipo: T_INTEIRO .

    $default  reduce using rule 14 (tipo)


State 7

   15 tipo: T_LOGICO .

    $default  reduce using rule 15 (tipo)


State 8

    2 programa: cabecalho variaveis . $@1 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 11


State 9

    5 variaveis: declaracao_variaveis .

    $default  reduce using rule 5 (variaveis)


State 10

   12 declaracao_variaveis: tipo . lista_variaveis declaracao_variaveis
   13                     | tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 12

    variavel         go to state 13
    lista_variaveis  go to state 14


State 11

    2 programa: cabecalho variaveis $@1 . T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 15


State 12

    7 variavel: T_IDENTIF . $@2 tamanho

    $default  reduce using rule 6 ($@2)

    $@2  go to state 16


State 13

    9 lista_variaveis: variavel .

    $default  reduce using rule 9 (lista_variaveis)


State 14

    8 lista_variaveis: lista_variaveis . variavel
   12 declaracao_variaveis: tipo lista_variaveis . declaracao_variaveis
   13                     | tipo lista_variaveis .

    T_IDENTIF  shift, and go to state 12
    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 13 (declaracao_variaveis)

    variavel              go to state 17
    declaracao_variaveis  go to state 18
    tipo                  go to state 10


State 15

    2 programa: cabecalho variaveis $@1 T_INICIO . lista_comandos T_FIM

    T_IDENTIF  shift, and go to state 19
    T_LEIA     shift, and go to state 20
    T_ESCREVA  shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_SE       shift, and go to state 23
    T_REPITA   shift, and go to state 24

    $default  reduce using rule 16 (lista_comandos)

    lista_comandos  go to state 25
    comando         go to state 26
    leitura         go to state 27
    escrita         go to state 28
    repeticao       go to state 29
    selecao         go to state 30
    atribuicao      go to state 31


State 16

    7 variavel: T_IDENTIF $@2 . tamanho

    T_ABREC  shift, and go to state 32

    $default  reduce using rule 10 (tamanho)

    tamanho  go to state 33


State 17

    8 lista_variaveis: lista_variaveis variavel .

    $default  reduce using rule 8 (lista_variaveis)


State 18

   12 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis .

    $default  reduce using rule 12 (declaracao_variaveis)


State 19

   36 atribuicao: T_IDENTIF . $@8 T_ATRIB expr
   39           | T_IDENTIF . $@9 T_ABREC expr T_FECHAC $@10 T_ATRIB expr

    T_ABREC   reduce using rule 37 ($@9)
    $default  reduce using rule 35 ($@8)

    $@8  go to state 34
    $@9  go to state 35


State 20

   24 leitura: T_LEIA . T_IDENTIF $@3 colchetes

    T_IDENTIF  shift, and go to state 36


State 21

   27 escrita: T_ESCREVA . expr

    T_IDENTIF  shift, and go to state 37
    T_V        shift, and go to state 38
    T_F        shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42

    expr   go to state 43
    termo  go to state 44


State 22

   30 repeticao: T_ENQTO . $@4 expr T_FACA $@5 lista_comandos T_FIMENQTO

    $default  reduce using rule 28 ($@4)

    $@4  go to state 45


State 23

   34 selecao: T_SE . expr T_ENTAO $@6 lista_comandos T_SENAO $@7 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 37
    T_V        shift, and go to state 38
    T_F        shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42

    expr   go to state 46
    termo  go to state 44


State 24

   31 repeticao: T_REPITA . lista_comandos T_ATE expr T_FIMREPITA

    T_IDENTIF  shift, and go to state 19
    T_LEIA     shift, and go to state 20
    T_ESCREVA  shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_SE       shift, and go to state 23
    T_REPITA   shift, and go to state 24

    $default  reduce using rule 16 (lista_comandos)

    lista_comandos  go to state 47
    comando         go to state 26
    leitura         go to state 27
    escrita         go to state 28
    repeticao       go to state 29
    selecao         go to state 30
    atribuicao      go to state 31


State 25

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos . T_FIM

    T_FIM  shift, and go to state 48


State 26

   17 lista_comandos: comando . lista_comandos

    T_IDENTIF  shift, and go to state 19
    T_LEIA     shift, and go to state 20
    T_ESCREVA  shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_SE       shift, and go to state 23
    T_REPITA   shift, and go to state 24

    $default  reduce using rule 16 (lista_comandos)

    lista_comandos  go to state 49
    comando         go to state 26
    leitura         go to state 27
    escrita         go to state 28
    repeticao       go to state 29
    selecao         go to state 30
    atribuicao      go to state 31


State 27

   18 comando: leitura .

    $default  reduce using rule 18 (comando)


State 28

   19 comando: escrita .

    $default  reduce using rule 19 (comando)


State 29

   20 comando: repeticao .

    $default  reduce using rule 20 (comando)


State 30

   21 comando: selecao .

    $default  reduce using rule 21 (comando)


State 31

   22 comando: atribuicao .

    $default  reduce using rule 22 (comando)


State 32

   11 tamanho: T_ABREC . T_NUMERO T_FECHAC

    T_NUMERO  shift, and go to state 50


State 33

    7 variavel: T_IDENTIF $@2 tamanho .

    $default  reduce using rule 7 (variavel)


State 34

   36 atribuicao: T_IDENTIF $@8 . T_ATRIB expr

    T_ATRIB  shift, and go to state 51


State 35

   39 atribuicao: T_IDENTIF $@9 . T_ABREC expr T_FECHAC $@10 T_ATRIB expr

    T_ABREC  shift, and go to state 52


State 36

   24 leitura: T_LEIA T_IDENTIF . $@3 colchetes

    $default  reduce using rule 23 ($@3)

    $@3  go to state 53


State 37

   53 termo: T_IDENTIF . $@11 indice

    $default  reduce using rule 52 ($@11)

    $@11  go to state 54


State 38

   55 termo: T_V .

    $default  reduce using rule 55 (termo)


State 39

   56 termo: T_F .

    $default  reduce using rule 56 (termo)


State 40

   54 termo: T_NUMERO .

    $default  reduce using rule 54 (termo)


State 41

   57 termo: T_NAO . termo

    T_IDENTIF  shift, and go to state 37
    T_V        shift, and go to state 38
    T_F        shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42

    termo  go to state 55


State 42

   58 termo: T_ABRE . expr T_FECHA

    T_IDENTIF  shift, and go to state 37
    T_V        shift, and go to state 38
    T_F        shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42

    expr   go to state 56
    termo  go to state 44


State 43

   27 escrita: T_ESCREVA expr .
   42 expr: expr . T_VEZES expr
   43     | expr . T_DIV expr
   44     | expr . T_MAIS expr
   45     | expr . T_MENOS expr
   46     | expr . T_MAIOR expr
   47     | expr . T_MENOR expr
   48     | expr . T_IGUAL expr
   49     | expr . T_E expr
   50     | expr . T_OU expr

    T_VEZES  shift, and go to state 57
    T_DIV    shift, and go to state 58
    T_MAIS   shift, and go to state 59
    T_MENOS  shift, and go to state 60
    T_IGUAL  shift, and go to state 61
    T_MAIOR  shift, and go to state 62
    T_MENOR  shift, and go to state 63
    T_E      shift, and go to state 64
    T_OU     shift, and go to state 65

    $default  reduce using rule 27 (escrita)


State 44

   51 expr: termo .

    $default  reduce using rule 51 (expr)


State 45

   30 repeticao: T_ENQTO $@4 . expr T_FACA $@5 lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 37
    T_V        shift, and go to state 38
    T_F        shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42

    expr   go to state 66
    termo  go to state 44


State 46

   34 selecao: T_SE expr . T_ENTAO $@6 lista_comandos T_SENAO $@7 lista_comandos T_FIMSE
   42 expr: expr . T_VEZES expr
   43     | expr . T_DIV expr
   44     | expr . T_MAIS expr
   45     | expr . T_MENOS expr
   46     | expr . T_MAIOR expr
   47     | expr . T_MENOR expr
   48     | expr . T_IGUAL expr
   49     | expr . T_E expr
   50     | expr . T_OU expr

    T_ENTAO  shift, and go to state 67
    T_VEZES  shift, and go to state 57
    T_DIV    shift, and go to state 58
    T_MAIS   shift, and go to state 59
    T_MENOS  shift, and go to state 60
    T_IGUAL  shift, and go to state 61
    T_MAIOR  shift, and go to state 62
    T_MENOR  shift, and go to state 63
    T_E      shift, and go to state 64
    T_OU     shift, and go to state 65


State 47

   31 repeticao: T_REPITA lista_comandos . T_ATE expr T_FIMREPITA

    T_ATE  shift, and go to state 68


State 48

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM .

    $default  reduce using rule 2 (programa)


State 49

   17 lista_comandos: comando lista_comandos .

    $default  reduce using rule 17 (lista_comandos)


State 50

   11 tamanho: T_ABREC T_NUMERO . T_FECHAC

    T_FECHAC  shift, and go to state 69


State 51

   36 atribuicao: T_IDENTIF $@8 T_ATRIB . expr

    T_IDENTIF  shift, and go to state 37
    T_V        shift, and go to state 38
    T_F        shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42

    expr   go to state 70
    termo  go to state 44


State 52

   39 atribuicao: T_IDENTIF $@9 T_ABREC . expr T_FECHAC $@10 T_ATRIB expr

    T_IDENTIF  shift, and go to state 37
    T_V        shift, and go to state 38
    T_F        shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42

    expr   go to state 71
    termo  go to state 44


State 53

   24 leitura: T_LEIA T_IDENTIF $@3 . colchetes

    T_ABREC  shift, and go to state 72

    $default  reduce using rule 25 (colchetes)

    colchetes  go to state 73


State 54

   53 termo: T_IDENTIF $@11 . indice

    T_ABREC  shift, and go to state 74

    $default  reduce using rule 40 (indice)

    indice  go to state 75


State 55

   57 termo: T_NAO termo .

    $default  reduce using rule 57 (termo)


State 56

   42 expr: expr . T_VEZES expr
   43     | expr . T_DIV expr
   44     | expr . T_MAIS expr
   45     | expr . T_MENOS expr
   46     | expr . T_MAIOR expr
   47     | expr . T_MENOR expr
   48     | expr . T_IGUAL expr
   49     | expr . T_E expr
   50     | expr . T_OU expr
   58 termo: T_ABRE expr . T_FECHA

    T_VEZES  shift, and go to state 57
    T_DIV    shift, and go to state 58
    T_MAIS   shift, and go to state 59
    T_MENOS  shift, and go to state 60
    T_IGUAL  shift, and go to state 61
    T_MAIOR  shift, and go to state 62
    T_MENOR  shift, and go to state 63
    T_E      shift, and go to state 64
    T_OU     shift, and go to state 65
    T_FECHA  shift, and go to state 76


State 57

   42 expr: expr T_VEZES . expr

    T_IDENTIF  shift, and go to state 37
    T_V        shift, and go to state 38
    T_F        shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42

    expr   go to state 77
    termo  go to state 44


State 58

   43 expr: expr T_DIV . expr

    T_IDENTIF  shift, and go to state 37
    T_V        shift, and go to state 38
    T_F        shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42

    expr   go to state 78
    termo  go to state 44


State 59

   44 expr: expr T_MAIS . expr

    T_IDENTIF  shift, and go to state 37
    T_V        shift, and go to state 38
    T_F        shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42

    expr   go to state 79
    termo  go to state 44


State 60

   45 expr: expr T_MENOS . expr

    T_IDENTIF  shift, and go to state 37
    T_V        shift, and go to state 38
    T_F        shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42

    expr   go to state 80
    termo  go to state 44


State 61

   48 expr: expr T_IGUAL . expr

    T_IDENTIF  shift, and go to state 37
    T_V        shift, and go to state 38
    T_F        shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42

    expr   go to state 81
    termo  go to state 44


State 62

   46 expr: expr T_MAIOR . expr

    T_IDENTIF  shift, and go to state 37
    T_V        shift, and go to state 38
    T_F        shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42

    expr   go to state 82
    termo  go to state 44


State 63

   47 expr: expr T_MENOR . expr
